--- a/Project/sahaSahibiMain.html
+++ b/Project/sahaSahibiMain.html
@@ -19,7 +19,7 @@
     <video autoplay muted loop>
       <source src="intro-futboll.mp4" type="video/mp4" />
 
-      Your browser does not support the video tag.
+      Your browser does not support the video tag !
     </video>
 
     <header class="navbar">
